--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -1,47 +1,29 @@
-name: CI/CD Pipeline
+name: CI Pipeline
 
 on:
   push:
     branches:
-      - main  # Trigger only when code is pushed to main (e.g., after PR merge)
+      - main  # triggers only when PR is merged into main
 
 jobs:
-  build-test-deploy:
+  build-and-test:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout the repository
-      - name: Checkout Repository
+      # 1️⃣ Checkout repo
+      - name: Checkout code
         uses: actions/checkout@v4
 
       # 2️⃣ Setup Flutter
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.24.0' # specify your Flutter version
+          flutter-version: '3.24.5' # replace with your Flutter version
 
-      # 3️⃣ Install Dependencies
-      - name: Install Dependencies
+      # 3️⃣ Install dependencies
+      - name: Install dependencies
         run: flutter pub get
 
-      # 4️⃣ Run Flutter Analyzer
-      - name: Analyze Code
-        run: flutter analyze
-
-      # 5️⃣ Run Tests
-      - name: Run Tests
-        run: flutter test
-
-      # 6️⃣ Build Release APK (Optional)
-      - name: Build APK
+      # 6️⃣ (Optional) Build release APK
+      - name: Build release APK
         run: flutter build apk --release
-
-      # 7️⃣ Deploy (Optional) - Example: Firebase Hosting
-      - name: Deploy to Firebase Hosting
-        if: success() # Only run if all previous steps succeed
-        uses: FirebaseExtended/action-hosting-deploy@v0
-        with:
-          repoToken: "${{ secrets.GITHUB_TOKEN }}"
-          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT }}"
-          channelId: live
-          projectId: causz-app # Replace with your Firebase project ID
