--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -27,3 +27,11 @@ jobs:
       # 6️⃣ (Optional) Build release APK
       - name: Build release APK
         run: flutter build apk --release
+
+            # 7️⃣ Upload APK as an artifact
+      - name: Upload release APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: release-apk
+          path: build/app/outputs/flutter-apk/app-release.apk
+
